2001-12-11  Kiyokazu SUTO <suto@ks-and-ks.ne.jp>

	* [w3m-dev 02441] A patch against functions *_(un)?quote()
	* indep.c (url_unquote_char): use GET_MYCDIGIT, instead of sscanf
	* indep.c (url_quote): use xdigit[] instead of sprintf()
	* myctype.c (MYCTYPE_DIGITMAP): added
	* myctype.h (MYCTYPE_DIGITMAP): ditto
	* myctype.h (GET_MYCDIGIT): added

2001-12-11  Fumitoshi UKAI  <ukai@debian.or.jp>

	* [w3m-dev 02647]
	* proto.h (getAnchor): deleted
	* etc.c (getAnchor): deleted

2001-12-09  Kiyokazu SUTO <suto@ks-and-ks.ne.jp>

	* [w3m-dev 02646] Some code cleanups
	* configure: use host libgc instead of gc/gc.a on Linux and/or AIX
	            if possible
	* etc.c (get_cmd): deleted, merged into gethtmlcmd()
	* etc.c (gethtmlcmd): merge get_cmd() code
	* file.c (uncompressed_file_type): initialize slen
	* file.c (passthrough): status deleted
	* file.c (HTMLlineproc0): istr deleted, gethtmlcmd() argument fix
	* fm.h (_GNU_SOURCE): ifndef _GNU_SOURCE
	* proto.h (gethtmlcmd): fix prototypes
	* terms.c: include <sys/ioctl.h> always

2001-12-09  Fumitoshi UKAI  <ukai@debian.or.jp>

	* [w3m-dev 02645]
	* configure: fix to prevent rcsid expansion

2001-12-08  Fumitoshi UKAI  <ukai@debian.or.jp>

	* [w3m-dev 02641]
	* configure: generate version.c from version.c.in
	* version.c.in: added
	* version.c: deleted, autogenerated from version.c.in
	* .cvsignore (version.c): added

2001-12-07  Fumitoshi UKAI  <ukai@debian.or.jp>

	* [w3m-dev 02642]
	* linein.c (next_dcompl): fix ifdef EMACS_LIKE_LINEEDIT

2001-12-07  Hironori Sakamoto <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 02640]
	* linein.c (escape_spaces): rewrite
	* linein.c (unescape_spaces): rewrite

2001-12-07  Tsutomu Okada <okada@furuno.co.jp>

	* [w3m-dev 02638] completion for ! and/or @
	* linein.c (next_compl): check "\\ ", "\\\t"
	* linein.c (escape_spaces): added
	* linein.c (unescape_spaces): added
	* linein.c (doComplete): use unescape_spaces, escape_spaces

2001-12-07  Fumitoshi UKAI  <ukai@debian.or.jp>
