@@ -1,4 +1,4 @@
-/* $Id: indep.c,v 1.15 2001/12/10 15:23:08 ukai Exp $ */
+/* $Id: indep.c,v 1.16 2001/12/10 15:27:59 ukai Exp $ */
 #include "fm.h"
 #include <stdio.h>
 #include <pwd.h>
@@ -33,14 +33,7 @@ allocStr(const char *s, int len)
 int
 strCmp(const void *s1, const void *s2)
 {
-    unsigned char *p1 = *(unsigned char **)s1;
-    unsigned char *p2 = *(unsigned char **)s2;
-
-    while ((*p1 != '\0') && (*p1 == *p2)) {
-	p1++;
-	p2++;
-    }
-    return (*p1 - *p2);
+    return strcmp(*(const char **)s1,  *(const char **)s2);
 }
 
 char *
